[package]
name = "ical-filter"
version = "0.2.0"
authors = ["Wouter Geraedts <git@woutergeraedts.nl>"]
edition = "2018"
description = "HTTP daemon to normalize and filter iCalendar files"
license = "MIT"
repository = "https://github.com/Wassasin/ical-filter"
readme = "README.md"
keywords = ["web", "ical", "ics"]
categories = ["web-programming::http-server"]

[dependencies]
actix-web = { version = "2.0.0", features = ["rustls"] }
actix-rt = "1.1.1"
awc = "1.0.1"
bytes = "0.5.5"
env_logger = "0.7.1"

chrono = { version = "0.4.11", features = ["serde"] }
chrono-tz = "0.5.2"

# To generate ICS
ics = "0.4.2"
# To parse ICS
ical = "0.6.0"

serde = "1.0.114"
serde_json = "1.0.55"
serde_qs = { version = "0.7.0", features = ["actix"] }

regex = "1.3.9"
listenfd = "0.3.3"

[features]
clippy = []
